--- a/lovespresso.html
+++ b/lovespresso.html
@@ -24,7 +24,7 @@
         </header>
 
         <main>
-<img width="100%" src="barista.jpg" />
+<img width="100%" src="images/barista.jpg" />
             <section>
              <h2>About Us</h2>
              <p>Our coffee beans comes from Colombia.</p>
@@ -32,34 +32,34 @@
 
             <section>
                 <video width="540" height="320" controls>
-                    <source src="video.mp4" type="video/mp4">
+                    <source src="images/video.mp4" type="video/mp4">
                     Your browser does not support HTML5.
                 </video>
             </section>
 
             <section>
                 <audio width="600" controls autoplay loop>
-                    <source src="audio.mp3" type="audio/mp3">
+                    <source src="images/audio.mp3" type="audio/mp3">
                 </audio>
             </section>
 
             <section id="News">
                 <h2>News</h2>
                 <article>
-                    <img width="50%" src="C:\Users\İPEK\Desktop\İPEK\Hello_World\coffee-shop.jpg" />
+                    <img width="50%" src="images/coffee-shop.jpg" />
                     <h4>The Best Coffee Shop In The NYC has opened!</h4>
                     <p>The famous Turkish architect Ipek B.T. Aksu attended the opening ceremony 
                         with her husband who is also famous QA engineer Mustafa Aksu... <a href="#">Read more...</a> </p> 
                 </article>
 
                 <article>
-                    <img width="50%" src="./discount-coffee.jpg" />
+                    <img width="50%" src="images/discount-coffee.jpg" />
                     <h4>New year sales!</h4>
                     <p>30% sales all coffee until 31 December... <a href="#">Read more...</a> </p> 
                 </article>
                 
                 <article>
-                    <img width="50%" src="buy-1-get-1.jpg" />
+                    <img width="50%" src="images/buy-1-get-1.jpg" />
                     <h4>Buy 1, get 1 for free!</h4>
                     <p>One of every two coffees you buy is a gift from us. <a href="#">Read more...</a>
                         <h6>P.s. The offer is valid until 30 November 2021... </h6>  </p> 
@@ -72,7 +72,7 @@
                 
    
             </section>
-<img width="100%" src="coffee-types.jpg" />
+<img width="100%" src="images/coffee-types.jpg" />
 
             <section id="contact form" action="place-order.php">
                 <h2>Place Order</h2>
