--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
               <th width= 200px>Type</th>
               <th width=200px>Tall
                 <br />
-                <img width="10%" src="cup.jpg" />
+                <img width="10%" src="images/cup.jpg" />
               </th>
               <th width=200px>Grande
                 <br />
-                <img width="20%" src="cup.jpg" />
+                <img width="20%" src="images/cup.jpg" />
               </th>
               <th width=200px>Venti
                 <br />
-                <img width="30%" src="cup.jpg" />
+                <img width="30%" src="images/cup.jpg" />
               </th>
               
             </tr>
