--- a/lovespresso.html
+++ b/lovespresso.html
@@ -13,7 +13,7 @@
 
     <body>
         <header id="main-header">
-            <h1>LovEspressO</h1>
+            <h1>LovEspresso</h1>
             <h3>LOVE</h3>
             <h3>ESPRESSO</h3>
         </header>
