--- a/lovespresso.html
+++ b/lovespresso.html
@@ -46,23 +46,21 @@
             <section id="News">
                 <h2>News</h2>
                 <article>
-                    <img width="50%" src="images/coffee-shop.jpg" />
-                    <h4>The Best Coffee Shop In The NYC has opened!</h4>
-                    <p>The famous Turkish architect Ipek B.T. Aksu attended the opening ceremony 
-                        with her husband who is also famous QA engineer Mustafa Aksu... <a href="#">Read more...</a> </p> 
+                    <div class="article-image" style="background:url(images/coffee-shop.jpg)" >  </div>
+                    <h4>The Best Coffee Shop In The NYC!</h4>
+                    <p>The best coffee shop in the NYC has opened... <a href="#">Read more...</a> </p> 
                 </article>
 
                 <article>
-                    <img width="50%" src="images/discount-coffee.jpg" />
+                    <div class="article-image" style="background:url(images/discount-coffee.jpg)"> </div>
                     <h4>New year sales!</h4>
                     <p>30% sales all coffee until 31 December... <a href="#">Read more...</a> </p> 
                 </article>
                 
                 <article>
-                    <img width="50%" src="images/buy-1-get-1.jpg" />
+                    <div class="article-image" style="background:url(images/buy-1-get-1.jpg)"> </div>
                     <h4>Buy 1, get 1 for free!</h4>
-                    <p>One of every two coffees you buy is a gift from us. <a href="#">Read more...</a>
-                        <h6>P.s. The offer is valid until 30 November 2021... </h6>  </p> 
+                    <p>One of every two coffees you buy is a gift from us. <a href="#">Read more...</a> </p> 
                 </article>
 
             </section>
