--- a/lovespresso.html
+++ b/lovespresso.html
@@ -13,7 +13,7 @@
 
     <body>
         <header id="main-header">
-            <h1>LovEspresso</h1>
+            <h1 id="site-title">LovEspresso</h1>
             <h3>LOVE</h3>
             <h3>ESPRESSO</h3>
         </header>
@@ -48,19 +48,19 @@
                 <article>
                     <div class="article-image" style="background:url(images/coffee-shop.jpg)" >  </div>
                     <h4>The Best Coffee Shop In The NYC!</h4>
-                    <p>The best coffee shop in the NYC has opened... <a href="#">Read more...</a> </p> 
+                    <p>The best coffee shop in the NYC has opened... <a href="#" class="more-link bolded-link">Read more...</a> </p> 
                 </article>
 
                 <article>
                     <div class="article-image" style="background:url(images/discount-coffee.jpg)"> </div>
                     <h4>New year sales!</h4>
-                    <p>30% sales all coffee until 31 December... <a href="#">Read more...</a> </p> 
+                    <p>30% sales all coffee until 31 December... <a href="#" class="more-link bolded-link">Read more...</a> </p> 
                 </article>
                 
                 <article>
                     <div class="article-image" style="background:url(images/buy-1-get-1.jpg)"> </div>
                     <h4>Buy 1, get 1 for free!</h4>
-                    <p>One of every two coffees you buy is a gift from us. <a href="#">Read more...</a> </p> 
+                    <p>One of every two coffees you buy is a gift from us. <a href="#" class="more-link bolded-link">Read more...</a> </p> 
                 </article>
 
             </section>
