--- a/lovespresso.html
+++ b/lovespresso.html
@@ -89,9 +89,9 @@
 
                     <br />
                     <h4>Coffees</h4>
-                    <input name:"coffee" type="checkbox" value="espresso" /> Espresso &nbsp; &nbsp; &nbsp; <input name="shot" type="radio" value="single" /> Single &nbsp; &nbsp; <input name="shot" type="radio" value="double" /> Double
+                    <input name="coffee" type="checkbox" value="espresso" /> Espresso &nbsp; &nbsp; &nbsp; <input name="shot" type="radio" value="single" /> Single &nbsp; &nbsp; <input name="shot" type="radio" value="double" /> Double
                     <br />
-                    <input name:"coffee" type="checkbox" value="espresso machiato"/> Espresso machiato
+                    <input name="coffee" type="checkbox" value="espresso machiato"/> Espresso machiato
                     <br />
                     <input name="coffee" type="checkbox" value="latte"/> Latte
                     <br />
