Adding search bar and adding opacity to articles

--- a/lovespresso.html
+++ b/lovespresso.html
@@ -23,6 +23,8 @@
             <h3>Welcome</h3>
         </header>
 
+        <input placeholder="Search..." class="search-input" />
+
         <main>
 <img width="100%" src="images/barista.jpg" />
             <section>
