changing the header design

--- a/lovespresso.html
+++ b/lovespresso.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>lovEspresso</title>
+        <title>A Cup of Love</title>
         <meta charset="UTF-8">
         <meta name="description" content="This is a website to introduce the best coffee shop in London">
         <meta name="keywords" content="London Coffees, London Coffee Shop, Coffee, Espresso">
@@ -13,7 +13,8 @@
 
     <body>
         <header id="main-header">
-            <h1 id="site-title">LovEspresso</h1>
+            <h1 id="site-title-left">lovEspresso</h1>
+            <h1 id="site-title-right">lovEspresso</h1>
             <h3>LOVE</h3>
             <h3>ESPRESSO</h3>
         </header>
@@ -65,6 +66,19 @@
                     <p>One of every two coffees you buy is a gift from us. <a href="#" class="more-link bolded-link">Read more...</a> </p> 
                 </article>
 
+                <div class="my-text">
+                    <p class="lorem-ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ex lacinia, placerat tortor sit amet, tristique risus. Nullam a pellentesque tellus. Nullam ultricies, sem et pretium facilisis, purus tellus volutpat mi, id accumsan sapien odio id odio. Phasellus gravida non lorem at accumsan. Maecenas non nulla rhoncus quam bibendum scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna arcu, dapibus sit amet leo eget, porttitor vulputate justo. In hac habitasse platea dictumst. Etiam tincidunt scelerisque tellus nec pellentesque.
+                    </p>
+                    <p class="lorem-ipsum">Cras eget eleifend risus. Vestibulum et porttitor leo, faucibus ultrices est. Sed scelerisque vitae mi non cursus. Morbi pretium pellentesque porta. Quisque sagittis, nunc viverra accumsan bibendum, tellus orci condimentum ante, in blandit sem risus at lorem. In ex tellus, blandit eleifend erat non, laoreet venenatis dolor. Aenean euismod vehicula sollicitudin. Aliquam consequat risus in justo blandit, et fermentum leo accumsan. Proin ut mauris tortor. Nulla facilisi. Integer molestie odio ut eros semper, id rutrum tellus volutpat. Curabitur semper eget magna rhoncus tristique. Fusce non vestibulum magna, in tempus nunc. Fusce in neque eu quam eleifend efficitur sed eu turpis. Ut id elit volutpat, dignissim nisi at, eleifend nisl.
+                    </p> 
+                    <p class="lorem-ipsum">Aliquam non tortor vel velit pulvinar semper eu vel diam. Praesent vitae dolor commodo, imperdiet quam vitae, pretium nibh. Mauris sollicitudin est ex, ac semper arcu semper in. Nunc gravida, lorem vel molestie posuere, libero neque placerat purus, eget varius augue mi eget ligula. Praesent faucibus facilisis efficitur. Nam efficitur felis sed ipsum consectetur, eget mattis tellus sollicitudin. Donec vel tellus ac libero varius tincidunt. Quisque eu ipsum id purus pulvinar consequat. Pellentesque ac velit bibendum ipsum feugiat mollis ac in massa.
+                    </p>
+                    <p class="lorem-ipsum">Maecenas odio magna, faucibus sed finibus vitae, mattis in arcu. Pellentesque massa lectus, maximus id eros sit amet, consequat pharetra lectus. Sed et elit et ante sodales cursus. Donec nec diam malesuada, mattis eros a, molestie quam. Donec maximus ac dui id interdum. Sed mattis ligula sit amet diam tincidunt, non eleifend sem tempor. Etiam massa elit, commodo a nisi ut, volutpat malesuada elit. Curabitur aliquet ligula ac tellus aliquam, eget commodo mauris sodales. Suspendisse auctor pulvinar mauris sed maximus. Sed diam est, vestibulum nec metus vel, vehicula consectetur tellus. Suspendisse potenti. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse faucibus at mauris nec interdum. Cras dapibus accumsan tellus, et suscipit arcu lacinia a. Donec et ipsum erat. Donec sodales ante turpis, quis volutpat felis fermentum eget.
+                    </p>
+                    <p class="lorem-ipsum">Pellentesque in laoreet nibh, eu volutpat leo. Nam vulputate tincidunt purus eget iaculis. Praesent id nulla sapien. Fusce mollis, ante in iaculis auctor, arcu erat eleifend nunc, eu tincidunt lacus turpis mattis est. Aliquam nec justo id nisl lacinia viverra in eu urna. Praesent sit amet tempor erat, eu viverra est. Vestibulum molestie dapibus velit, vitae auctor turpis hendrerit id. Phasellus a dolor sodales, molestie erat pulvinar, elementum libero.
+                    </p>
+                </div>
+                
             </section>
 
             <section>
