--- a/lovespresso.html
+++ b/lovespresso.html
@@ -132,10 +132,12 @@
             </section>   
 
             <footer>
-                <center>&copy;2020<br/>
+                <center>&copy;2022<br/>
                 <a href="#">Terms of Service</a></center>
             </footer>
 
         </main>
+
+        <script src="js/main.js"> </script>
     </body>
 </html>
