--- a/lovespresso.html
+++ b/lovespresso.html
@@ -83,6 +83,10 @@
 
             <section>
                 <a href="index.html"> <h2>Coffees</h2> </a>
+                <button id="coffees-button">Coffees</button>
+                </br>
+                <div id="text">Love Espresso</div>
+
                 <img width="100%" src="images/coffee-types.jpg" />
             </section>
 
