--- a/lovespresso.html
+++ b/lovespresso.html
@@ -24,7 +24,9 @@
             <h3>Welcome</h3>
         </header>
 
-        <input placeholder="Search..." class="search-input" />
+        <button id="search-button">Search</button>
+        <input placeholder="..." class="search-input" /> 
+        <div id="text-2">Let's Find!</div>
 
         <main>
 <img width="100%" src="images/barista.jpg" />
@@ -83,10 +85,6 @@
 
             <section>
                 <a href="index.html"> <h2>Coffees</h2> </a>
-                <button id="coffees-button">Coffees</button>
-                </br>
-                <div id="text">Love Espresso</div>
-
                 <img width="100%" src="images/coffee-types.jpg" />
             </section>
 
@@ -134,6 +132,16 @@
                 </form>
 
             </section>   
+
+            <section>
+                <h2>Contact Us</h2>
+                <input class="customer-name" placeholder="Name"/> <br/> 
+                <input class="customer-surname" placeholder="Surname"/> <br/> 
+                <input class="subject" placeholder="Subject of your messsage"/> <br/> 
+                <textarea class="customer-message" placeholder="Your message"></textarea> <br/> 
+                <button id="send-button">Send</button> <br/>
+                <div id="sent-message">   </div>
+            </section>
 
             <footer>
                 <center>&copy;2022<br/>
