Dropdown menu added.

--- a/lovespresso.html
+++ b/lovespresso.html
@@ -12,12 +12,24 @@
     </head>
 
     <body>
+
         <header id="main-header">
-            <h1 id="site-title-left">lovEspresso</h1>
-            <h1 id="site-title-right">lovEspresso</h1>
+            <ul class="menu">
+                <li> <a class="menu-trigger" data-trigger="dropdown" href="#"> MENU </a>  
+                    <ul class="submenu">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Coffees</a></li>
+                        <li><a href="#">Shops</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </li>
+            </ul>
+
             <h3>LOVE</h3>
             <h3>ESPRESSO</h3>
         </header>
+
+      
 
         <header>
             <h3>Best Coffee Ever!</h3>
@@ -149,7 +161,7 @@
             </footer>
 
         </main>
-
-        <script src="js/main.js"> </script>
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+        <script src="js/new.js"> </script>
     </body>
 </html>
